# chessic

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: chessic.h
src/: CMakeLists.txt  bits.c  bits.h  board.c  board.h  board_state.c  board_state.h  move.c  movegen.c  movegen.h  parser.c  parser.h  piece.c  res.txt  token.c  uci.c  utils.c  utils.h  zobrist.c  zobrist.h
src/test/: make_undo_tests.c  make_undo_tests.h  minunit.h  movegen_tests.c  movegen_tests.h  parser_tests.c  parser_tests.h  perft_tests.c  perft_tests.h  test.c
test_engine/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  attackgen_tests.c  attackgen_tests.h  make_undo_tests.c  minunit.h  movegen_tests.c  movegen_tests.h  parser_tests.c  parser_tests.h  perft_tests.c  perftsuite.epd  test.c  token_tests.c  token_tests.h  uci_tests.c  uci_tests.h
